--- a/src/styles/components/mainContent/login.module.scss
+++ b/src/styles/components/mainContent/login.module.scss
@@ -40,10 +40,10 @@
         width: 100%;
         height: 100%;
         padding: 175px;
-        background-image: url(../../../../public/image/login/BG.jpg);
+       /*  background-image: url("./image/login/BG.jpg");
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover; */
 
 
 
