--- a/src/styles/components/mainContent/login.module.scss
+++ b/src/styles/components/mainContent/login.module.scss
@@ -36,7 +36,7 @@
     & .content {
         @include flex(center,space-between);
         gap: 30px;
-
+        background-color: rgb(218, 237, 254);
         width: 100%;
         height: 100%;
         padding: 175px;
